--- a/src/sections/Contact.css
+++ b/src/sections/Contact.css
@@ -2,7 +2,6 @@
   width: 100%;
   text-align: center;
   position: relative;
-
   background-color: #101010;
   /* background-color: #36454f; */
   height: calc(100vh - 60px);
@@ -25,6 +24,7 @@
 }
 
 .email-container {
+  margin-top: 30px;
   display: flex;
   align-items: center;
   justify-content: center;
